[gd_scene load_steps=12 format=2]

[ext_resource path="res://World/Objects/walls/spaceBack.png" type="Texture" id=1]
[ext_resource path="res://World/Objects/walls/talkBox.png" type="Texture" id=2]
[ext_resource path="res://World/Screens/introScreen.gd" type="Script" id=3]
[ext_resource path="res://World/Levels/Hub.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Levels/spaceTheme.gd" type="Script" id=5]
[ext_resource path="res://Sounds/spaceTheme.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://UIs/GL-Nummernschild-Mtl.ttf"

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "New Anim"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.439216, -0.25, 0, 0.25, 0, 0.831373, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 )
}

[sub_resource type="DynamicFontData" id=4]
font_path = "res://UIs/GL-Nummernschild-Mtl.ttf"

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 4 )

[node name="introScreen" type="Node2D"]
script = ExtResource( 3 )
target_scene = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 773.359, 456.636 )
scale = Vector2( 1.44204, 1.43712 )
texture = ExtResource( 1 )

[node name="talking box" type="Sprite" parent="."]
position = Vector2( 680.061, 648.568 )
scale = Vector2( 0.97577, 0.994392 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 31.2218
margin_top = 565.695
margin_right = 71.2218
margin_bottom = 615.695
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_char" type="Timer" parent="."]

[node name="next_message" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = -2.0
margin_right = 1371.0
margin_bottom = 772.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 1240.25
margin_top = 683.365
margin_right = 1324.25
margin_bottom = 729.365
custom_fonts/font = SubResource( 5 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spaceTheme" type="Node" parent="."]
script = ExtResource( 5 )

[node name="BGMusic" type="AudioStreamPlayer" parent="spaceTheme"]
stream = ExtResource( 6 )
volume_db = -6.011
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="next_char" to="." method="_on_next_char_timeout"]
[connection signal="timeout" from="next_message" to="." method="_on_next_message_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="finished" from="spaceTheme/BGMusic" to="spaceTheme" method="_on_BGMusic_finished"]
